--- a/index.css
+++ b/index.css
@@ -44,5 +44,9 @@ body {
 a.logo {
   color: var(--primary);
   font-weight: bold;
-  font-size: 1.8rem;
+  font-size: 2.8rem;
+}
+
+header ul {
+  display: flex;
 }
