--- a/index.css
+++ b/index.css
@@ -113,3 +113,9 @@ section.features .wrapper svg {
   width: 3.5rem;
   margin-left: -0.15rem;
 }
+
+section.features .wrapper strong {
+  display: flex;
+  flex-direction: column;
+  font-size: 2.6rem;
+}
