--- a/index.css
+++ b/index.css
@@ -120,3 +120,10 @@ section.features .wrapper strong {
   font-size: 2.6rem;
   gap: 0.2em;
 }
+
+/* testimonials section */
+
+h2 {
+  font-size: 2.8rem;
+  /* font-family: "Playfair Display", serif; */
+}
