--- a/index.css
+++ b/index.css
@@ -125,5 +125,5 @@ section.features .wrapper strong {
 
 h2 {
   font-size: 2.8rem;
-  /* font-family: "Playfair Display", serif; */
+  font-family: "Playfair Display", serif;
 }
