--- a/index.css
+++ b/index.css
@@ -126,4 +126,5 @@ section.features .wrapper strong {
 h2 {
   font-size: 2.8rem;
   font-family: "Playfair Display", serif;
+  font-weight: 300;
 }
