--- a/index.css
+++ b/index.css
@@ -129,6 +129,10 @@ h2 {
   font-weight: 300;
 }
 
+.testimonian-qoute p {
+  font-size: 1.6em;
+}
+
 .author-pic {
   width: 100%;
   height: 17.7em;
