--- a/index.css
+++ b/index.css
@@ -205,4 +205,7 @@ nav.secondary-nav ul li a {
 /* midia queroes-- Tablet */
 
 @media only screen and (min-width: 700px) {
+  .hero .wrapper {
+    display: flex;
+  }
 }
