--- a/index.css
+++ b/index.css
@@ -205,6 +205,10 @@ nav.secondary-nav ul li a {
 /* midia queroes-- Tablet */
 
 @media only screen and (min-width: 700px) {
+  .header-act {
+    display: block;
+  }
+
   .hero .wrapper {
     display: flex;
     justify-content: space-between;
