--- a/index.css
+++ b/index.css
@@ -207,6 +207,7 @@ nav.secondary-nav ul li a {
 @media only screen and (min-width: 700px) {
   .header-act {
     display: block;
+    background-color: #7e00fd;
   }
 
   .hero .wrapper {
