--- a/index.css
+++ b/index.css
@@ -210,6 +210,7 @@ nav.secondary-nav ul li a {
     background-color: #7e00fd;
     color: #fff;
     padding: 1.1rem 2rem;
+    border-radius: 3px;
   }
 
   .hero .wrapper {
