--- a/index.css
+++ b/index.css
@@ -248,4 +248,8 @@ nav.secondary-nav ul li a {
   }
 
   /* features section */
+
+  section.feature {
+    transform: skewY(7deg) translateY(-8em);
+  }
 }
