--- a/index.css
+++ b/index.css
@@ -259,5 +259,6 @@ nav.secondary-nav ul li a {
   section.features:before {
     content: "";
     position: absolute;
+    background: url("./asset/graphic.svg") no-repeat;
   }
 }
