--- a/index.css
+++ b/index.css
@@ -262,5 +262,6 @@ nav.secondary-nav ul li a {
     background: url("./asset/graphic.svg") no-repeat;
     width: 205px;
     height: 80px;
+    bottom: -30px;
   }
 }
