--- a/index.css
+++ b/index.css
@@ -267,5 +267,7 @@ nav.secondary-nav ul li a {
   }
 
   section.feature .wrapper ul {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
