--- a/index.css
+++ b/index.css
@@ -269,5 +269,6 @@ nav.secondary-nav ul li a {
   section.feature .wrapper ul {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
   }
 }
