--- a/index.css
+++ b/index.css
@@ -276,4 +276,6 @@ nav.secondary-nav ul li a {
   section.features .wrapper ul li:last-of-type {
     grid-column: 1/3;
   }
+
+  /* testimonials section */
 }
