--- a/index.css
+++ b/index.css
@@ -283,4 +283,13 @@ nav.secondary-nav ul li a {
     display: flex;
     gap: 2em;
   }
+
+  .author-pic,
+  .author {
+    flex: 1;
+  }
+
+  .author-pic {
+    margin: 0;
+  }
 }
