adding justify-content

--- a/index.css
+++ b/index.css
@@ -296,5 +296,6 @@ nav.secondary-nav ul li a {
   .author {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
   }
 }
