--- a/index.css
+++ b/index.css
@@ -301,3 +301,9 @@ nav.secondary-nav ul li a {
 }
 
 /* media queroes --Desktop */
+
+@media only screen and (min-width: 950px) {
+  .wrapper {
+    max-width: 1000px;
+  }
+}
