--- a/index.css
+++ b/index.css
@@ -305,5 +305,6 @@ nav.secondary-nav ul li a {
 @media only screen and (min-width: 950px) {
   .wrapper {
     max-width: 1000px;
+    margin: 2em auto;
   }
 }
