--- a/index.css
+++ b/index.css
@@ -307,4 +307,10 @@ nav.secondary-nav ul li a {
     max-width: 1000px;
     margin: 2em auto;
   }
+  /* .phone {
+    width: 500px;
+  } */
+  .hero .right-col {
+    width: 500px;
+  }
 }
