--- a/index.css
+++ b/index.css
@@ -307,9 +307,10 @@ nav.secondary-nav ul li a {
     max-width: 1000px;
     margin: 2em auto;
   }
-  /* .phone {
+  .phone {
     width: 500px;
-  } */
+    left: -100px;
+  }
   .hero .right-col {
     width: 500px;
     height: 600px;
