adding grid-template-columns

--- a/index.css
+++ b/index.css
@@ -318,4 +318,8 @@ nav.secondary-nav ul li a {
   }
 
   /* features section */
+
+  section.features .wrapper ul {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
