--- a/index.css
+++ b/index.css
@@ -321,5 +321,6 @@ nav.secondary-nav ul li a {
 
   section.features .wrapper ul {
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
   }
 }
