--- a/index.css
+++ b/index.css
@@ -322,5 +322,11 @@ nav.secondary-nav ul li a {
   section.features .wrapper ul {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
+    height: 300px;
+  }
+
+  section.features .wrapper ul li:last-of-type {
+    grid-column: auto;
+    align-self: end;
   }
 }
