--- a/index.css
+++ b/index.css
@@ -329,4 +329,6 @@ nav.secondary-nav ul li a {
     grid-column: auto;
     align-self: end;
   }
+  section.features .wrapper ul li:nth-of-type(2) {
+  }
 }
