--- a/index.css
+++ b/index.css
@@ -329,7 +329,12 @@ nav.secondary-nav ul li a {
     grid-column: auto;
     align-self: end;
   }
+
   section.features .wrapper ul li:nth-of-type(2) {
     align-self: center;
+  }
+
+  section.features:before {
+    left: 20%;
   }
 }
