--- a/index.css
+++ b/index.css
@@ -345,4 +345,9 @@ nav.secondary-nav ul li a {
     gap: 4em;
     margin: 12em 0;
   }
+
+  .testimonial-qoute,
+  .testimonial-info {
+    flex: 1;
+  }
 }
